# robot-task

./: .env  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 279540d1b7c7_inital_setup.py
src/: main.py
src/api/v1/: api.py
src/api/v1/endpoints/: robot.py
src/core/: config.py  database.py
src/crud/: base.py  result.py
src/models/: result.py
src/robot/: memory.py  robot.py
src/schemas/: robot.py
tests/api/: test_api.py
tests/core/: test_database.py
tests/robot/: test_memory.py  test_robot.py
